--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,15 +4,26 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Goblanch Portfolio</title>
+		<meta name="description" content="Goblanch Portfolio" />
+		<meta name="keywords" content="Goblanch Portfolio, Gonzalo Blanch, Computer Science, Software Engineering, Game Development, Game Programming, Student, Developer, Programmer, Web Development" />
+		<meta name="author" content="Gonzalo Blanch, Goblanch, gonzaloblanchdev@gmail.com" />
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
+		<meta name="bingbot" content="index, follow" />
+		<meta name="yandexbot" content="index, follow" />
+		<meta name="duckduckbot" content="index, follow" />
+		<meta name="alexa" content="index, follow" />
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 
-<style>
+<style is:global>
+	@import "tailwindcss";
+	@plugin "@midudev/tailwind-animations";
+	
 	html,
 	body {
 		margin: 0;
